chatbot-service.yml
apiVersion: v1
kind: Service
metadata:
  name: chatbot-service
  namespace: chatbot-umsa
spec:
  selector:
    app: chatbot
  ports:
    - name: n8n
      protocol: TCP
      port: 5678
      targetPort: 5678
    - name: evolution
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
EOF
